--- a/blog/_posts/lollipopstudio/remakenotes/01.md
+++ b/blog/_posts/lollipopstudio/remakenotes/01.md
@@ -8,28 +8,132 @@ tag:
   - CSS
   - Vue
   - Vite
-title: Lollipop Studio 官网重置笔记
+title: Lollipop Studio 官网重制笔记 Day01 创建项目🎉
 description: null
 image: null
 
 ---
 
-# Lollipop Studio 官网重制笔记 Day01🎉
+# Lollipop Studio 官网重制笔记 Day01 创建项目🎉
 这里是冰凌重制 [Lollipop Studio 官网][ls] 的笔记...
 
 ## 起因
-由于原先使用的 [Vuepress][vp] 制作官网呈现的效果并不是很好   
-所以我决定使用原生 [Vue][vue] 加上强大的各种 UI 库   
-将 [Lollipop Studio][ls] 官网重新制作   
+由于原先使用的 [Vuepress][vp] 制作官网呈现的效果并不是很好，所以我决定使用原生 [Vue][vue] 加上各种强大的 UI 库，将 [Lollipop Studio][ls] 官网重新制作。   
 
 ## 起步
-经过冰凌的深思熟虑   
-我决定使用 [Vite][vite] 来构建整个项目   
-*没有了解过的可以先去了解下 Vite*   
+经过冰凌的深思熟虑，我决定使用 [Vite][vite] 来构建整个项目。   
+> 没有了解过的可以先去了解下 [Vite][vite]    
 
+Vite 提供了飞速的开发服务器和对各大前端开发框架的支持，因为 Vite 为 Vue 提供第一优先级支持，所以对于 Vue 开发者极其友好。   
 
+闲话不多说，我们直接开始。   
+
+## 创建项目
+根据 Vite 官方文档的指引，我们打开终端使用下面的命令来创建项目：   
+
+```shell
+# yarn yes!
+$ yarn create @vitejs/app
+
+# npm
+$ npm init @vitejs/app
+```
+
+> ~~大坑警告~~
+
+看着 yarn 熟悉的包安装流程，我本以为一切都很顺利，结果 yarn 上来就给我抛个大坑：
+
+```shell
+$ yarn create @vitejs/app
+yarn create v1.22.10
+\[1/4\] Resolving packages...
+\[2/4\] Fetching packages...
+\[3/4\] Linking dependencies...
+\[4/4\] Building fresh packages...
+success Installed "@vitejs/create-app@2.2.1" with binaries:
+      \- create\-app
+      \- cva
+/usr/bin/env: ‘node\\r’: No such file or directory
+error Command failed.
+Exit code: 127
+Command: 
+Arguments: 
+Directory: E:\
+Output:
+
+info Visit https://yarnpkg.com/en/docs/cli/create for documentation about this command.
+```
+
+不过好在有万能的 Bing ，我很快找到了解决方案。   
+因为 yarn 默认的 cache 和 global 文件夹在 C 盘下，所以我们在其他盘执行命令时会没有权限而执行失败，所以只需要新建文件夹然后执行下面的命令更改 yarn 的 cache 和 global 目录就好了：
+
+```shell
+$ yarn config set global-folder "E:\\yarn\\global"
+$ yarn config set cache-folder "E:\\yarn\\cache"
+```
+
+改好以后我们再来运行一下创建项目的命令
+
+```shell
+$ yarn create @vitejs/app
+yarn create v1.22.10
+[1/4] Resolving packages...
+[2/4] Fetching packages...
+[3/4] Linking dependencies...
+[4/4] Building fresh packages...
+
+success Installed "@vitejs/create-app@2.4.1" with binaries:
+      - create-app
+      - cva
+√ Project name: ... lollipopstudio
+√ Select a framework: » vue
+√ Select a variant: » vue
+
+Scaffolding project in E:\lollipopstudio...
+
+Done. Now run:
+
+  cd lollipopstudio
+  yarn
+  yarn dev
+
+Done in 47.66s.
+```
+
+这里我使用的是 `vue-ts` 模板，你也可以在 [Vite 的官方文档][vite] 或 [Github 仓库][vitegit] 上找到更多的资料
+
+接下来我们来初始化一下项目：   
+
+```shell
+$ cd .\lollipopstudio\
+$ yarn
+yarn install v1.22.10
+[1/4] Resolving packages...
+[2/4] Fetching packages...
+[3/4] Linking dependencies...
+[4/4] Building fresh packages...
+success Saved lockfile.
+Done in 67.58s
+```
+
+跑个开发服务器试试：
+
+```shell
+$ yarn dev
+vite v2.3.6 dev server running at:
+
+  > Local: http://localhost:3000/
+  > Network: use `--host` to expose
+
+  ready in 7444ms.
+```
+
+![](https://cdn.jsdelivr.net/gh/bingling-sama/Resources@latest/img/20210606202100.png)
+
+看这启动速度，令人感动。~~隔壁 Vue CLI 学学啊~~
 
 [vp]: https://vuepress.vuejs.org/
 [vue]: https://vue3js.cn/docs/zh/
 [vite]: https://cn.vitejs.dev/
+[vitegit]: https://github.com/vitejs/docs-cn
 [ls]: https://www.lollipopstudio.cn/
